# give-head

./: README.md  ROADMAP.md
build_release/src/: give-head
src/: CMakeLists.txt  main.cpp
src/generator/: generator.cpp
src/lexer/: definitions.h  function.h  keywords.h  lexer.cpp  lexer.h  token_definitions.h
src/parser/: parser.cpp  parser.h
test/: test.h  test2.c  test2.h  test_arrays.c  test_arrays.h  test_edge.h  test_funcptr.c  test_funcptr.h  test_globals.c  test_globals.h  test_multiline.h  test_preproc.c  test_preproc.h  test_selfref.h  test_static.c  test_static.h  test_structs.c  test_structs.h  test_typedefs.c  test_typedefs.h
